--- a/teste.html
+++ b/teste.html
@@ -8,6 +8,6 @@
     <link href="teste.css" rel="stylesheet">
 </head>
 <body>
-    <img src="07-drool-html-intermediario-zoado/images/bird.jpg" rel="">
+    <img src="bird.jpg" rel="">
 </body>
 </html>
